# insights

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: README.md
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: health.py  overview.py  strategies.py
backend/app/core/: config.py
backend/app/db/: clickhouse_client.py  mysql_client.py  pool.py
backend/app/jobs/: sync_counterfactual_facts.py  sync_execution_facts.py  sync_performance_facts.py  sync_strategy_data.py  sync_symbol_tpsl_facts.py
backend/app/schemas/: analysis.py  strategy.py
backend/app/services/: counterfactual_sync.py  execution_sync.py  performance_sync.py  strategy_sync.py  symbol_tpsl_sync.py
docs/: standardized_metrics_symbol_lab_design.md  system_design.md  testing_guide.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.d.ts  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  router.ts  styles.css  types.ts  utils.ts
frontend/src/components/: DeltaBarChart.tsx  LineCompareChart.tsx
frontend/src/pages/: OverviewPage.tsx  ParameterLabPage.tsx  StrategyDetailPage.tsx
sql/: 001_init_insights_schema.sql  002_bootstrap_dim_strategy.sql  003_extend_strategy_daily.sql  004_add_symbol_tpsl_tables.sql
