[project]
name = "insights"
version = "0.1.0"
description = "每日调仓与 TPSL 交易分析平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "clickhouse-connect>=0.9.2",
    "fastapi>=0.116.1",
    "pymysql>=1.1.2",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
